--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "visual-zookeeper",
+	"name": "visual-zookeeper",
 	"displayName": "visual-zookeeper",
 	"description": "",
 	"version": "0.0.1",
@@ -10,7 +10,8 @@
 		"Other"
 	],
 	"activationEvents": [
-        "onCommand:visual-zookeeper.helloWorld"
+		"onCommand:visual-zookeeper.helloWorld",
+		"onView:visualZooKeeper"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
@@ -19,7 +20,15 @@
 				"command": "visual-zookeeper.helloWorld",
 				"title": "Hello World"
 			}
-		]
+		],
+		"views": {
+			"explorer": [
+				{
+					"id": "visualZooKeeper",
+					"name": "Visual ZooKeeper"
+				}
+			]
+		}
 	},
 	"scripts": {
 		"vscode:prepublish": "yarn run compile",
@@ -30,16 +39,20 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.65.0",
 		"@types/glob": "^7.2.0",
 		"@types/mocha": "^9.1.0",
 		"@types/node": "14.x",
+		"@types/node-zookeeper-client": "^0.2.8",
+		"@types/vscode": "^1.65.0",
 		"@typescript-eslint/eslint-plugin": "^5.12.1",
 		"@typescript-eslint/parser": "^5.12.1",
+		"@vscode/test-electron": "^2.1.2",
 		"eslint": "^8.9.0",
 		"glob": "^7.2.0",
 		"mocha": "^9.2.1",
-		"typescript": "^4.5.5",
-		"@vscode/test-electron": "^2.1.2"
+		"typescript": "^4.5.5"
+	},
+	"dependencies": {
+		"node-zookeeper-client": "^1.1.1"
 	}
 }
